--- a/.gitignore
+++ b/.gitignore
@@ -112,6 +112,11 @@ ipython_config.py
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
 
+# uscis folder
+uscis/
+ask_priya_index/
+data/
+
 # Celery stuff
 celerybeat-schedule
 celerybeat.pid
