--- a/.gitignore
+++ b/.gitignore
@@ -143,8 +143,6 @@ venv.bak/
 # mkdocs documentation
 /site
 
-.streamlit/
-
 # mypy
 .mypy_cache/
 .dmypy.json
@@ -165,3 +163,8 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Streamlit environment files
+.streamlit/*.json
+.streamlit/credentials.toml
+.streamlit/secrets.toml
